# subtitle-sync

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-publish.yml
app/: config.py  main.py
app/models/: media.py  settings.py  subtitle.py
app/routers/: health.py  logs.py  movies.py  settings.py  shows.py  sync.py  translate.py
app/services/: extract.py  files.py  logs.py  probe.py  radarr.py  sonarr.py  sync.py  translate.py
app/static/: index.html
app/static/css/: app.css
app/static/js/: api.js  app.js
app/static/js/pages/: dashboard.js  episode.js  episodes.js  movie.js  movies.js  settings.js  shows.js
