[project]
name = "subtitle-sync"
version = "1.0.0"
description = "Sync external subtitles using Radarr/Sonarr integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "ffsubsync>=0.4.25",
    "pysubs2>=1.6.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
